<resources>
    <string name="app_name">Zoomies</string>
    <string name="get_trends">Get Trends</string>
    <string name="enter_hashtag">#ghidra</string>
    <string name="search">search</string>
    <string name="help_search_hashtag">Search for posts with your desired hashtag by entering it in
        the field below and tapping search.</string>
    <string name="help_get_trends">Tap the button below to get a list of the trending hashtags
        and choose one to view the relevant posts.</string>
    <string name="help_create_post">Create a post by filling in the following form with the desired
        text. Optionally, upload an image, a photo, or a gif by tapping "Upload Media". You must
        first enter the desired text and then upload media, else the app will crash.</string>
    <string name="enter_text">Enter text</string>
    <string name="upload_media">Upload Media</string>
    <string name="create_post">Create Post</string>
    <string name="view_posts">View Posts</string>
    <string name="like_post">Like</string>
    <string name="retweet_post">Retweet</string>
    <string name="reply_to_post">Reply</string>
    <string name="checkbox_twitter">Twitter</string>
    <string name="checkbox_facebook">Facebook</string>
    <string name="checkbox_instagram">Instagram</string>
</resources>