<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HashtagsActivity">

    <EditText
        android:id="@+id/etHashtag"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_hashtag"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHashtagsHelp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTrends"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="358dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetTrends" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/search"
        app:layout_constraintStart_toEndOf="@+id/etHashtag"
        app:layout_constraintTop_toBottomOf="@+id/tvHashtagsHelp" />

    <TextView
        android:id="@+id/tvHashtagsHelp"
        android:layout_width="280dp"
        android:layout_height="74dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/help_search_hashtag"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTrendsHelp"
        android:layout_width="280dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/help_get_trends"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHashtag" />

    <Button
        android:id="@+id/btnGetTrends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/get_trends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTrendsHelp" />

</androidx.constraintlayout.widget.ConstraintLayout>